<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/calculatorScroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="?android:attr/actionBarSize"
            android:background="@color/white"
            tools:context="edu.byu.android.helloandroid.CalculatorFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/editText1"
            style="@style/calculatorDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_sample_text" >

            <requestFocus />
        </TextView>

        <GridLayout
            android:id="@+id/gridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4" >

            <Button
                android:id="@+id/button7"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/digit_7" />

            <Button
                android:id="@+id/button8"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/digit_8" />

            <Button
                android:id="@+id/button9"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/digit_9" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/operatorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="0"
                android:text="@string/multiply_caption" />

            <Button
                android:id="@+id/button4"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/digit_4" />

            <Button
                android:id="@+id/button5"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/digit_5" />

            <Button
                android:id="@+id/button6"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/digit_6" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/operatorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="1"
                android:text="@string/divide_caption" />

            <Button
                android:id="@+id/button1"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/digit_1" />

            <Button
                android:id="@+id/button2"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/digit_2" />

            <Button
                android:id="@+id/button3"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/digit_3" />

            <Button
                android:id="@+id/buttonAdd"
                style="@style/operatorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="2"
                android:text="@string/plus_caption" />

            <Button
                android:id="@+id/button0"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/digit_0" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/digitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/period_caption" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/operatorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="3"
                android:text="@string/equals_caption" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/operatorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="3"
                android:text="@string/subtract_caption" />
        </GridLayout>
    </LinearLayout>

</ScrollView>